--- a/project_1/app/build.gradle
+++ b/project_1/app/build.gradle
@@ -3,3 +3,22 @@ plugins {
   id 'com.android.application' version '8.8.2' apply false
   id 'org.jetbrains.kotlin.android' version '2.1.10' apply false
 }
+dependencies {
+  implementation libs.androidx.core.ktx
+  implementation libs.androidx.appcompat
+  implementation libs.material
+  implementation libs.androidx.activity
+  implementation libs.androidx.constraintlayout
+  testImplementation libs.junit
+  androidTestImplementation libs.androidx.junit
+  androidTestImplementation libs.androidx.espresso.core
+}
+java {
+  sourceCompatibility JavaVersion.VERSION_11
+  targetCompatibility JavaVersion.VERSION_11
+}
+kotlin {
+  compilerOptions {
+    jvmTarget = org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_11
+  }
+}
