--- a/project_1/client/app/src/main/AndroidManifest.xml
+++ b/project_1/client/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-feature android:name="android.hardware.nfc.hce" android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -20,6 +22,19 @@
         android:theme="@style/Theme.Client"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <service
+            android:name=".utils.CardService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.BIND_NFC_SERVICE">
+            <intent-filter>
+                <action android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.nfc.cardemulation.host_apdu_service"
+                android:resource="@xml/aid_list"/>
+        </service>
         <activity
             android:name=".MainActivity4"
             android:exported="false" />
