Add weather today basic

--- a/project_2/app/pubspec.yaml
+++ b/project_2/app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     cupertino_icons: ^1.0.8
     sqflite: ^2.4.2
     path: ^1.9.1
+    flame: ^1.28.1
 
 dev_dependencies:
     flutter_test:
@@ -59,6 +60,7 @@ flutter:
     uses-material-design: true
     assets:
         - assets/images/weather.png
+        - assets/images/icon.png
     # To add assets to your application, add an assets section, like this:
     # assets:
     #   - images/a_dot_burr.jpeg
