--- a/project_2/app/pubspec.yaml
+++ b/project_2/app/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
     sqflite: ^2.4.2
     path: ^1.9.1
     flame: ^1.28.1
+    intl: ^0.18.1
+    fl_chart:
+        git:
+            url: https://github.com/imaNNeoFighT/fl_chart.git
+            ref: main
 
 dev_dependencies:
     flutter_test:
