--- a/project_2/app/pubspec.yaml
+++ b/project_2/app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
         git:
             url: https://github.com/imaNNeoFighT/fl_chart.git
             ref: main
+    flutter_dotenv: ^5.1.0
 
 dev_dependencies:
     flutter_test:
@@ -86,6 +87,7 @@ flutter:
         - assets/city/viseu.jpg
         - assets/city/funchal.jpg
         - assets/city/ponta_delgada.jpg
+        - .env
     # To add assets to your application, add an assets section, like this:
     # assets:
     #   - images/a_dot_burr.jpeg
