--- a/project_2/app/pubspec.yaml
+++ b/project_2/app/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
             ref: main
     flutter_dotenv: ^5.1.0
     shared_preferences: ^2.2.2
+    flutter_slidable: ^3.0.1
+
 
 
 dev_dependencies:
