--- a/project_2/app/pubspec.yaml
+++ b/project_2/app/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
     flutter_dotenv: ^5.1.0
     shared_preferences: ^2.2.2
     flutter_slidable: ^3.0.1
+    flutter_colorpicker: ^1.1.0
 
 
 
