--- a/project_2/app/pubspec.yaml
+++ b/project_2/app/pubspec.yaml
@@ -46,6 +46,13 @@ dependencies:
     shared_preferences: ^2.2.2
     flutter_slidable: ^3.0.1
     flutter_colorpicker: ^1.1.0
+    flutter_svg: ^2.0.7
+    flutter_launcher_icons: ^0.14.3
+
+flutter_launcher_icons:
+    android: true
+    ios: true
+    image_path: "assets/images/weather.png"
 
 
 
